--- a/other/TDP_RoboCup2016/TDP_OrbioneTeam.tex
+++ b/other/TDP_RoboCup2016/TDP_OrbioneTeam.tex
@@ -12,6 +12,12 @@
 \def\addcontentsline#1#2#3{}%
 \def\markboth#1#2{}%
 
+
+\usepackage[pdftex]{graphicx}
+\graphicspath{{figures/}}
+\DeclareGraphicsExtensions{.pdf,.jpeg,.png}
+  
+  
 \begin{document}
 \title{Orbione-Bot Team Description Paper }
 
@@ -66,18 +72,159 @@ ever since.
 
 \section{Research}
 
-\subsection{Navigation}
+
+
+\begin{figure*}[ht]
+  \centering
+  \includegraphics[width=0.8\textwidth]{rokinarq-142}
+  \caption{Software architecture for RoCKIn competition.} 
+  \label{fig:architecture}
+\end{figure*}
+
+\subsection{Architecture}
+
+We have a three layers architecture based on ROS and Bica~\cite{aguero2010behavior}. 
+The lower layer corresponds to ROS, and is in charge of hardware management. 
+The intermediate layer provides the robot skills in order to carry out specific duties (perception, navigation,...).
+The top layer presents Bica. It is a component-based for generating behaviour s architecture. This node coordinates the various
+capabilities of the robot depending on the task to be carried out by the robot.
+Figure~\ref{fig:architecture} shows the overall architecture of the software we have developed for participating in the RoCKIn competition. 
+% In the peripheral layer, which represents the hardware access, we
+% use third-party ROS nodes. In the intermediate layer, we have developed the skills that should
+% have the robot to carry out their duties. Bica is at the core of this architecture. 
+
+
+
+
+
+
+
+\subsubsection{Component-based Architecture for Behaviour Generation}
+
+We use a component-based architecture~\cite{aguero2010behavior} to generate robot behaviour s. We recently
+started the integration of this approach to our platform for avoiding big and complex finite
+state machines (FSMs) developed ad-hoc in each ROS node. 
+% 
+% Figure~\ref{fig:BicaandROS} describes the implementation scheme of a robotic application using our approach.
+% There can be multiple ROS nodes containing components of our architecture, which communicate
+% with other ROS regular nodes. Besides ROS communications, ICE can be used to
+% interconnect any component with other processes or even to debug graphics applications.
+% 
+% 
+% 
+% \begin{figure}[ht!]
+%   \centering
+%   \includegraphics[width=0.5\textwidth]{50}
+%   \caption{Bica implementation inside ROS nodes. Solid lines represent ROS communication, and dashed lines ICE.} 
+%   \label{fig:BicaandROS}
+% \end{figure}
+% 
+
+
+
+The basic functional unit in our architecture is the Component, simple functional units
+that are executed iteratively at different rates. The main idea is to define components that
+perform just a single task, but very efficiently. A running component can activate other
+components, forming a dynamic hierarchy of components that implement a complete
+behaviour .
+
+Components can be very simple or very complex. Simple components communicate with
+the underlying system methods to use sensors or motors, or some other components.
+Complex components can be implemented as a FSM, so the set of components that are
+activated depends of the current state.
+
+
+Our approach uses only the required resources for a given task. When a component needs
+another, it explicitly calls its step() method. Components that are not being used by
+another component do not run, saving computing resources. 
+
+We have developed a useful tool to design these complex components. This tool generates
+the skeleton code for a behaviour  modelled graphically. Figure~\ref{fig:Bicacomponent} shows the implementation
+of a component as an FSM with nine states (yellow circles). In each state, another component
+(blue circles) are activated. From any component you can perform any communication with
+other nodes ROS.
+
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.5\textwidth]{202}
+  \caption{Bica component implementing a finite state machine to define a high-level behaviour.} 
+  \label{fig:Bicacomponent}
+\end{figure}
+
+
+
+
+\subsection{3D SLAM}
+
+We use our own self-localization algorithm based on 3D perception. 
+Our approach consists of creating a 3D map of a cloud formed by RGB-D or ColorOctomap \cite{hornung2013octomap} points. 
+When the robot is running, we use an algorithm to contrast the MCL RGB-D perception with the map to evaluate the population of particles.
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=.65\textwidth]{Navigation}
+    \caption{Rviz and Gazebo running the first approach of our 3D visual navigation method.}
+  \label{fig:navigation}
+\end{figure}
+
 
 \subsection{Context Awareness}
 
-\subsection{}
+
+Context-awareness is a fundamental component in human robot interaction. Understanding the user activity context the robot improves the overall decision-making process. This is because, given a context, the robot can reduce the set of  feasible actions. 
+We consider that using an on-board microphone and gathering environmental sounds we can improve the context recognition.
+
+For this purpose, we have designed, developed and tested  a computational lightweight Environment Recognition Component (ERC). %In this iteration our ERC  is able to recognize a set of four home bells.
+This component provides information to a Context-Awareness Component (CAC) that implements a hierarchical Bayesian network to tag user's activities based on the American Occupational Therapy Association (AOTA)  classification. 
 
 
 
-\section{Contributions}
+The system implemented for real environment deployment  works as follows: 
+\begin{enumerate}
+ \item The robot analyzes on runtime the environment situation and processes a set of observations. 
+ \item For simplifying, the solution links each observation with only one action \& operation. It makes that our four-layer solution became a three layers one.% which identifies the user activity.
+ \item With this information the robot calculates the conditional probability of an activity given an observation $P(A|o)$ instead of the action \& operation nodes. 
+ \item The conditional probability of the occupation nodes is defined by the associated activity  $P(Oc|a)$.
+%  \item With this information the robot calculates the conditional probability $P(Oc|a)$.
+\end{enumerate}
+
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=.6\textwidth]{SimulatorContext}
+    \caption{There are different acoustic singals available in all the real environments: doorbell, oven, fridge, ...}
+  \label{fig:contextsimulator}
+\end{figure}
+
+
+
+
+\subsection{Social Navigation}
+
+Navigating in a socially acceptable way is an important ability for mobile robots in populated
+environments that requires efficiently detecting and tracking humans to negotiate the space with.
+In particular, walking side by side is not a trivial problem that involves relative positioning
+calculations to the accompanying person taking into account the environment limitations (narrow
+corridors, turnings, etc.) as well as keeping its track towards its destination.
+
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=.2\textwidth]{CasoBase}
+    \includegraphics[width=.2\textwidth]{CasoAsistencia}
+    \includegraphics[width=.2\textwidth]{CasoAsistenciaNonVerbal}
+%     \includegraphics[width=.2\textwidth]{800px-Deixis2}
+    \caption{Two methods of assistive tasks (attending the follow-me approach): guidance without users (non-follow-me), 
+    guidance with disregarded users (follow-me without attention) and 
+    guidance with attended users offering non-verbal information to user (follow-me with attention).}
+  \label{fig:socialnavigation}
+\end{figure}
+
 
 
 \section{Reusability}
+
+Poner el repo de githuba de PACO, poner el repo de GitHub del equipo.
 
 
 
