--- a/other/TDP_RoboCup2016/biblio.bib
+++ b/other/TDP_RoboCup2016/biblio.bib
@@ -10,6 +10,20 @@
   year = {2010}
 }
 
+@ARTICLE{hornung2013octomap,
+  author = {Hornung, Armin and Wurm, Kai M and Bennewitz, Maren and Stachniss,
+	Cyrill and Burgard, Wolfram},
+  title = {OctoMap: An efficient probabilistic 3D mapping framework based on
+	octrees},
+  journal = {Autonomous Robots},
+  year = {2013},
+  volume = {34},
+  pages = {189--206},
+  number = {3},
+  publisher = {Springer}
+}
+
+
 @BOOK{aldoma2012our,
   title = {OUR-CVFH--Oriented, Unique and Repeatable Clustered Viewpoint Feature
 	Histogram for Object Recognition and 6DOF Pose Estimation},
