--- a/other/TDP_RoboCup2016/TDP_OrbioneTeam.tex
+++ b/other/TDP_RoboCup2016/TDP_OrbioneTeam.tex
@@ -23,7 +23,7 @@
 
 \author{Francisco J. Rodr\'iguez Lera, Fernando Casado, Jes\'us Balsa, Vicente Matell\'an\inst{1} \and Francisco Mart\'in Rico\inst{2}}
 
-\institute{Universidad de Le\'on, 24071, León, Spain
+\institute{Universidad de Le\'on, 24071, Le\'on, Spain
 \and
 Universidad Rey Juan Carlos, Madrid, Spain}
 
@@ -33,19 +33,16 @@ Universidad Rey Juan Carlos, Madrid, Spain}
 \maketitle
 %
 \begin{abstract}
-This paper aims to show the recent progress of our team to set up the robot RB1. 
-It describes the development of our team for taking part of the RoboCup@home 2016 that will be performed in Leipzig.
-We define a software architecture that is made up of the next main components: object recogntion, navigation, dialogue, manipulation and context awareness.
-All these components have been tested in open demostrations in our lab. 
-The motivation of this team is to generate more acceptable socially assistive robots.
-The RoboCup bring us the opportunity to move our demostrations from the lab to external environments before to test our researches in real home environments.
+This report aims to show the capabilities of the Spanish team named Orbione-Bot gathered to participate in the RoboCup@Home competition. It shows the background of our team members, the robot that we will be used (RB1) and the contributions to the RoboCup goals that we are expecting. It describes our software architecture which offers visual object recognition, autonomous navigation based on RGB-D sensors, dialogue including context awareness, and mobile manipulation abilities. These components have been tested in periodically open demonstrations held in our lab where we have built a mock-up apartment. 
+
 \end{abstract}
 %
 \section{Introduction}
 
-Watermelon Project team was originally created by the group of robotics at the University of
-Le\'on in 2012. In 2013 it was expanded with the addition of Robotics Group at the Rey Juan
-Carlos University ~\cite{martin2014myrabot}. 
+The research goal of our team is generating more acceptable socially assistive robots.
+RoboCup@Home will let us test our results in external environments before to test our researches in real home environments, and after testing them in our mock-up home.
+
+The background of our team is the Watermelon Project. This project was initiated at at the University Le\'on's  Robotics Group in 2012. In 2013 it was expanded with the addition of Robotics Group at the Rey Juan Carlos University \cite{martin2014myrabot}. 
 
 
 \section{Background}
