--- a/other/TDP_RoboCup2016/biblio.bib
+++ b/other/TDP_RoboCup2016/biblio.bib
@@ -10,7 +10,25 @@
   year = {2010}
 }
 
-@ARTICLE{hornung2013octomap,
+@BOOK{aldoma2012our,
+  title = {OUR-CVFH--Oriented, Unique and Repeatable Clustered Viewpoint Feature
+	Histogram for Object Recognition and 6DOF Pose Estimation},
+  publisher = {Springer},
+  year = {2012},
+  author = {Aldoma, Aitor and Tombari, Federico and Rusu, Radu Bogdan and Vincze,
+	Markus}
+}
+
+@STANDARD{RobotnikRB1,
+  title = {Robotnik announces the RB-1, a new ROS based mobile manipulator},
+  organization = {Robotnik},
+  author = {Alejandro Espert},
+  url = {http://www.ros.org/news/2015/02/robotnik-announces-the-rb-1-a-new-ros-based-mobile-manipulator.html},
+  owner = {fran},
+  timestamp = {2016.02.22}
+}
+
+@ARTICLE{Hornung2013,
   author = {Hornung, Armin and Wurm, Kai M and Bennewitz, Maren and Stachniss,
 	Cyrill and Burgard, Wolfram},
   title = {OctoMap: An efficient probabilistic 3D mapping framework based on
@@ -21,16 +39,6 @@
   pages = {189--206},
   number = {3},
   publisher = {Springer}
-}
-
-
-@BOOK{aldoma2012our,
-  title = {OUR-CVFH--Oriented, Unique and Repeatable Clustered Viewpoint Feature
-	Histogram for Object Recognition and 6DOF Pose Estimation},
-  publisher = {Springer},
-  year = {2012},
-  author = {Aldoma, Aitor and Tombari, Federico and Rusu, Radu Bogdan and Vincze,
-	Markus}
 }
 
 @ARTICLE{hornung2013octomap,
@@ -56,6 +64,17 @@
   pages = {41--50}
 }
 
+@INCOLLECTION{lera2015social,
+  author = {Lera, Francisco J Rodr{\'\i}guez and Casado, Fernando and Fern{\'a}ndez,
+	Camino and Matell{\'a}n, Vicente},
+  title = {Social Navigation Restrictions for Interactive Robots Using Augmented
+	Reality},
+  booktitle = {Advances in Artificial Intelligence},
+  publisher = {Springer},
+  year = {2015},
+  pages = {347--356}
+}
+
 @INPROCEEDINGS{lera2014mobile,
   author = {Lera, Francisco Rodriguez and Garcia, Fernando Casado and Esteban,
 	Gonzalo and Matellan, Vicente},
@@ -66,14 +85,6 @@
   year = {2014},
   pages = {149--154},
   organization = {IEEE}
-}
-
-@INPROCEEDINGS{tbd,
-  author = {Eitan Marder-Eppstein and Eric Berger and Tully Foote and Brian Gerkey
-	and Kurt Konolige},
-  title = {The Office Marathon: Robust Navigation in an Indoor Office Environment},
-  booktitle = {International Conference on Robotics and Automation},
-  year = {2010}
 }
 
 @INPROCEEDINGS{martin2014myrabot,
@@ -87,6 +98,16 @@
   organization = {IEEE}
 }
 
+@MISC{2RobotnikRB1,
+  author = {Robotnik},
+  title = {Mobile manipulator RB-1},
+  howpublished = {Online},
+  month = {2},
+  year = {215},
+  owner = {fran},
+  timestamp = {2016.02.22},
+  url = {http://www.robotnik.eu/manipulators/rb-one/}
+}
 
 @STANDARD{IEEESpectrum2015,
   title = {Robotnik Enters Mobile Manipulator Market With RB-1},
@@ -122,6 +143,12 @@
   url = {http://www.robotnik.es/web/wp-content/uploads/2014/06/RB-1-e\_New.pdf},
   owner = {fran},
   timestamp = {2015.09.30}
+}
+
+@OTHER{tsgdsfg,
+  owner = {fran},
+  timestamp = {2016.02.22},
+  url = {http://www.robotnik.eu/manipulators/rb-one/}
 }
 
 @comment{jabref-meta: selector_publisher:}
