--- a/conferences/WAF_2016/Seguridad/waf2016.bib
+++ b/conferences/WAF_2016/Seguridad/waf2016.bib
@@ -54,6 +54,13 @@ title = {{Advances in Autonomous Robotics Systems}},
 url = {http://dblp.uni-trier.de/db/conf/taros/taros2014.html{\#}CorradiHI14},
 volume = {8717},
 year = {2014}
+} 
+@InProceedings{Denning2009,
+author = { Denning, Tamara and Matuszek, Cynthia and  Koscher, Karl and  Smith, Joshua R. and  Kohno, Tadayoshi},
+title = {A Spotlight on Security and Privacy Risks with
+Future Household Robots: Attacks and Lessons},
+booktitle = {Proceedings of the 11th International Conference on Ubiquitous Computing},
+year ={ 2009}
 }
 @article{Guiochet2016,
 abstract = {New safety critical systems are about to appear in our everyday life: advanced robots able to interact with humans and perform tasks at home, in hospitals, or at work. A hazardous behavior of those systems, induced by failures or extreme environment conditions, may lead to catastrophic consequences. Well-known risk analysis methods used in other critical domains (e.g., avionics, nuclear, medical, transportation), have to be extended or adapted due to the non-deterministic behavior of those systems, evolving in unstructured environments. One major challenge is thus to develop methods that can be applied at the very beginning of the development process, to identify hazards induced by robot tasks and their interactions with humans. In this paper we present a method which is based on an adaptation of a hazard identification technique, HAZOP (Hazard Operability), coupled with a system description notation, UML (Unified Modeling Language). This systematic approach has been applied successfully in research projects, and is now applied by robot manufacturers. Some results of those studies are presented and discussed to explain the benefits and limits of our method.},
@@ -100,6 +107,12 @@ title = {{Safety certification requirements for domestic robots}},
 url = {http://dx.doi.org/10.1016/j.ssci.2012.05.009},
 volume = {50},
 year = {2012}
+}
+@InProceedings{Martin2014,
+author = {Martín, Francisco and Mateos, José and Lera, Francisco Javier and Bustos, Pablo and Matellán, Vicente},
+title = {A robotic platform for domestic applications},
+booktitle = {XV Workshop of Physical Agents},
+year = {2014}
 }
 @article{Morante2015,
 abstract = {With the expected introduction of robots into our daily lives, providing mechanisms to avoid undesired attacks and exploits in robot communication software is becoming increasingly required. Just as during the beginnings of the computer age (Pfleeger and Pfleeger, 2002), robotics is established in a “happy naivety,” where security rules against external attacks are not adopted, assuming that robotics knowledgeable people are well intended. While this may have been true in the past, the mass adoption of robots will increase the possibilities of attacks. This fact is especially relevant in defense, medical and other critical fields involving humans, where tampering can result in serious bodily harm and/or privacy invasions. For these reasons, we consider that researchers and industry should deploy efforts in cyber safety and acquire good practices when developing and distributing robot software. We propose the term Cryptobotics as a unifying term for research and applications of computer and microcontrollers’ security measures in robotics.},
